--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Playlist Condivisa – Pool Party</title>
+  <title>Playlist condivisa – Pool Party</title>
   <style>
     :root {
       --gap: 24px;
@@ -44,8 +44,8 @@
   </style>
 </head>
 <body>
-  <h1>Playlist Condivisa</h1>
-  <div class="muted">Pool Party – aggiungi i tuoi brani preferiti 🎶</div>
+  <h1>Playlist condivisa</h1>
+  <div class="muted">Pool Party – aggiungi brani alla playlist 🎶</div>
 
   <div class="layout">
     <!-- Colonna sinistra: Ricerca / Aggiunta -->
