--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-  <h1>Playlist condivisa</h1>
+  <h1>Playlist condivisa 🇦🇺</h1>
   <div class="muted">Pool Party – aggiungi brani alla playlist 🎶</div>
 
   <div class="layout">
@@ -52,6 +52,7 @@
     <div>
       <div class="card">
         <div class="section-title"><h3>🔎 Cerca brani</h3></div>
+        <br>
         <input id="q" type="text" placeholder="Cerca titolo o artista..." />
         <div class="spacer"></div>
         <input id="yourname" type="text" placeholder="Il tuo nome (facoltativo)" />
