--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <h1>Playlist condivisa 🇦🇺</h1>
-  <div class="muted">Pool Party – aggiungi brani alla playlist 🎶</div>
+  <div class="muted">Pool Party – Aggiungi i tuoi brani alla playlist</div>
 
   <div class="layout">
     <!-- Colonna sinistra: Ricerca / Aggiunta -->
