--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-  <h1>Playlist condivisa</h1>
+  <h1>Playlist condivisa 🇦🇺</h1>
   <div class="muted">Pool Party – Aggiungi i tuoi brani alla playlist</div>
 
   <div class="layout">
@@ -69,10 +69,9 @@
           <h3>🎵 Tracce aggiunte</h3>
           <span class="pill" id="count">0</span>
         </div>
-        <div class="muted">Si aggiorna in tempo reale</div>
         <div id="tracks"></div>
         <div class="spacer"></div>
-        <button id="btnExport">⬇️ Esporta CSV</button>
+        <button id="btnExport">Esporta CSV</button>
       </div>
     </div>
   </div>
